--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,18 @@
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
-    "root": false
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/airbnb"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
